--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 ### IntelliJ IDEA ###
 out/
+.idea/
 !**/src/main/**/out/
 !**/src/test/**/out/
+boca-bc24-java-core-problems.iml
 
 ### Eclipse ###
 .apt_generated
