--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
     </properties>
 
     <dependencies>
-
-
-
-
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version> <!-- Check for the latest version -->
+        </dependency>
 
         <!-- Add your project dependencies here -->
         <dependency>
@@ -34,15 +34,20 @@
             <scope>test</scope>
         </dependency>
 
+
     </dependencies>
 
     <build>
         <plugins>
             <!-- Configure the Maven Compiler Plugin -->
+
+
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
