all flow working end to end (instructor)

--- a/src/io/reacticestax/tradeprocessingmultithreadingassignment/Application.properties
+++ b/src/io/reacticestax/tradeprocessingmultithreadingassignment/Application.properties
@@ -1,3 +1,4 @@
-number.of.chunks = 10;
-number.of.trade.processor.threads= 10;
-number.Of.trade.queues= 5;
+number.of.chunks = 10
+number.of.trade.processor.threads= 3
+number.Of.trade.queues= 3
+trade.max.retries=3
